--- a/Zadania JS Irek.html
+++ b/Zadania JS Irek.html
@@ -87,8 +87,22 @@
                 </div>
                 <br>
             </div>
-            <div class="row no-gutters"></div>
+            <div class="row no-gutters pb-2">
                 <button class="btn btn-outline-secondary" type="button" name="button_z4" id="button_z4" value="Hello /somebody/"  width="10px">Hello /somebody/ </button>
+            </div>
+
+            <div class="row no-gutters">
+                <div class="col-lg-12">
+                    <div class="card card-title p-3 m-0 bg-dark text-white">
+                        <h1>Zadanie 5</h1>
+                    </div>
+                    <div class="card card-body  bg-secondary text-white">
+                        <p>Napisz prostą maszynę losującą, czyli funkcję, która przyjmuje jako argument tablicę zawierającą listę osób. Twoja funkcja powinna zwracać losową osobę z tej tablicy. Przykładowa tablica do wywołania funkcji: <kbd> const students = ["John", "Bill", "Emma", "Stella", "Rob"].</kbd></p>
+                    </div>
+                </div>
+            </div>
+            <div class="row no-gutters pb-2">
+                <button class="btn btn-outline-secondary" type="button" name="button_z5" id="button_z5" value="Losuj"  width="10px">Losuj</button>
             </div>
         </div>>
         
